--- a/WebApplication1/WebApplication1/Views/Dentist/MyPatients.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/MyPatients.cshtml
@@ -95,6 +95,7 @@
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning" })
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
                     @Html.ActionLink("Insert Medical Record", "MedicalRecord", new { id = item.Id }, new { @class = "btn btn-primary " })
+                    @Html.ActionLink("List Medical Records", "ListAllMedicalRecords", new { id = item.Id }, new { @class = "btn btn-primary " })
                 </td>
             </tr>
         }
